src/client/src/orangehrmAdminPlugin/pages/languagePackage/language-package.scss
// OrangeHRM is a comprehensive Human Resource Management (HRM) System that captures
// all the essential functionalities required for any enterprise.
// Copyright (C) 2006 OrangeHRM Inc., http://www.orangehrm.com
//
// OrangeHRM is free software; you can redistribute it and/or modify it under the terms of
// the GNU General Public License as published by the Free Software Foundation; either
// version 2 of the License, or (at your option) any later version.
//
// OrangeHRM is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
// without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
// See the GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License along with this program;
// if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
// Boston, MA  02110-1301, USA

.addlanguage-note{
    background-color: $oxd-interface-gray-lighten-2-color;
    border-radius: 10px;
    width: 100%;
    margin-top: 20px;
    margin-bottom: 20px;
}

.addlanguage-note-text{
    padding: 1.2rem;
}

.oxd-table-cell-actions{
    justify-content: end;
}

.orangehrm-dialog-modal{
    width: '90%';
    min-width: '800px';
}

.orangehrm-information-card-text {
    font-size: $oxd-input-control-font-size;
    color: $oxd-input-control-font-color;
    font-weight: $oxd-input-control-font-weight;
}

.oxd-table-th{
    margin-right: 10rem;
}

